Clean up project.clj